# usb_update_app

./: README.md
app/: CMakeLists.txt  config.cmake  prj.conf
app/fatfs/: middleware_fatfs.cmake  middleware_fatfs_mmc.cmake  middleware_fatfs_nand.cmake  middleware_fatfs_ram.cmake  middleware_fatfs_sd.cmake  middleware_fatfs_template_mmc.cmake  middleware_fatfs_template_nand.cmake  middleware_fatfs_template_ram.cmake  middleware_fatfs_template_sd.cmake  middleware_fatfs_template_sdspi.cmake  middleware_fatfs_template_usb.cmake  middleware_fatfs_usb.cmake
app/fatfs/template/mmc/: ffconf.h
app/fatfs/template/nand/: dhara_nand_config.h  ffconf.h
app/fatfs/template/ram/: ffconf.h
app/fatfs/template/sd/: ffconf.h
app/fatfs/template/sdspi/: ffconf.h
app/fatfs/template/usb/: ffconf.h
app/include/: app.h  board.h  ffconf.h  host_msd_fatfs.h  usb_host_config.h
app/lists/: component_lists.MIMXRT1062.cmake
app/osa/: component_osa.cmake  component_osa_thread.cmake  component_osa_zephyr.cmake  fsl_os_abstraction.h  fsl_os_abstraction_free_rtos.c  fsl_os_abstraction_threadx.c  fsl_os_abstraction_threadx.h  fsl_os_abstraction_zephyr.c
app/src/: host_msd_fatfs.c  main.c
app/usb/: ChangeLogKSDK.txt  middleware_usb_common_header.cmake  middleware_usb_device_audio_external.cmake  middleware_usb_device_ccid_external.cmake  middleware_usb_device_cdc_external.cmake  middleware_usb_device_cdc_rndis_external.cmake  middleware_usb_device_common_header.cmake  middleware_usb_device_controller_driver.cmake  middleware_usb_device_dfu_external.cmake  middleware_usb_device_ehci.cmake  middleware_usb_device_ehci_config_header.cmake  middleware_usb_device_hid_external.cmake  middleware_usb_device_msd_external.cmake  middleware_usb_device_phdc_external.cmake  middleware_usb_device_printer_external.cmake  middleware_usb_device_stack_external.cmake  middleware_usb_device_video_external.cmake  middleware_usb_host_audio.cmake  middleware_usb_host_cdc.cmake  middleware_usb_host_cdc_rndis.cmake  middleware_usb_host_common_header.cmake  middleware_usb_host_ehci.cmake  middleware_usb_host_ehci_config_header.cmake  middleware_usb_host_hid.cmake  middleware_usb_host_msd.cmake  middleware_usb_host_phdc.cmake  middleware_usb_host_printer.cmake  middleware_usb_host_stack.cmake  middleware_usb_host_video.cmake  middleware_usb_hsdcd_config_header.cmake  middleware_usb_pd.cmake  middleware_usb_pd_altmode.cmake  middleware_usb_pd_common_header.cmake  middleware_usb_pd_config_header.cmake  middleware_usb_pd_phy_ptn5110.cmake  middleware_usb_phy.cmake  middleware_usb_phydcd.cmake  middleware_usb_phydcd_config_header.cmake
app/usb/device/: usb_device_dci.c  usb_device_ehci.c
app/usb/host/: usb_host_ehci.c
app/usb/host/class/: usb_host_audio.c  usb_host_hub_app.c
app/usb/include/: usb_misc.h
app/usb/output/npw/device_config/ehci/: usb_device_config.h
app/usb/output/source/device/class/: usb_device_audio.h  usb_device_msc.c
app/usb/pd/: change_log.txt
app/usb/pd/ptn5110/: usb_pd_ptn5110_hal.c
